--- a/week1/L1/minist/mnist_catboost.ipynb
+++ b/week1/L1/minist/mnist_catboost.ipynb
@@ -1164,6 +1164,7 @@
     "data = digits.data\n",
     "\n",
     "# 采用Z-Score规范化\n",
+    "\n",
     "ss = preprocessing.StandardScaler()\n",
     "data1 = ss.fit_transform(data)\n",
     "\n",
@@ -1251,7 +1252,8 @@
    "metadata": {},
    "source": [
     "结论：在分割后的test集合中获取的元素索引位置与原始数组的索引位置不同，所以第二个图片的数字和第一张图片的数组始终不同\n",
-    "<font color=#FF0000>  需要继续探索内容：在代码调试阶段，如果想知道当前测试结果归类是否正确，怎样才能从测试集合中快速找到原始数据呢</font> "
+    "<font color=#FF0000>  需要继续探索内容：在代码调试阶段，如果想知道当前测试结果归类是否正确，怎样才能从测试集合中快速找到原始数据呢</font> \n",
+    "<font color=#FF0000>  需要继续探索内容：为什么在这个案例中的标准化要采用z-score呢？还有没有其他标准化方案，一般都是怎样选择标准化方案的</font> "
    ]
   },
   {
