--- a/week2/学习总结.ipynb
+++ b/week2/学习总结.ipynb
@@ -41,10 +41,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-14T09:18:53.722255Z",
+     "start_time": "2020-11-14T09:18:48.365000Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting fptools\n",
+      "  Downloading fptools-1.0-py2.py3-none-any.whl (5.2 kB)\n",
+      "Installing collected packages: fptools\n",
+      "Successfully installed fptools-1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import fptools as fp\n",
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "from mlxtend.frequent_patterns import apriori\n",
+    "from mlxtend.frequent_patterns import association_rules\n",
+    "# 读取数据\n",
+    "datas=pd.read_csv('./Market_Basket_Optimisation.csv',header=None)\n",
+    "# 通过迭代器方式对pd读取出来的数据转成list数组，并且出去其中的nan\n",
+    "itemsets = [[y for y in x if pd.notna(y)] for x in datas.values.tolist()]\n",
+    "itemDits={}\n",
+    "for items in itemsets:\n",
+    "    for item in items:\n",
+    "        if item not in itemDits.keys():\n",
+    "            itemDits[item] = 1\n",
+    "        else:\n",
+    "            itemDits[item] = itemDits[item] + 1\n",
+    "itemDits = sorted(itemDits.items(), key=lambda item:item[1], reverse=True)\n",
+    "# print(itemDits)\n",
+    "# tree,ranks=fp.build_tree(itemsets,356)\n",
+    "# print(sorted(ranks, key=lambda item:item[1], reverse=True))\n",
+    "# ss=fp.frequent_itemsets(itemsets,356)\n",
+    "#\n",
+    "# fis=[iset for iset in ss]\n",
+    "# mfis=[iset for iset in fp.maximal_frequent_itemsets(itemsets,356)]\n",
+    "\n",
+    "# 转换为算法可接受模型（布尔值）one-hot操作\n",
+    "te = TransactionEncoder()\n",
+    "df_tf = te.fit_transform(itemsets)\n",
+    "df = pd.DataFrame(df_tf, columns=te.columns_)\n",
+    "\n",
+    "# 设置支持度求频繁项集\n",
+    "frequent_itemsets = apriori(df, min_support=0.02, use_colnames=True)\n",
+    "# 求关联规则,设置最小置信度为0.15\n",
+    "print(frequent_itemsets)\n",
+    "rules = association_rules(frequent_itemsets,  min_threshold=0.15)\n",
+    "# 设置最小提升度\n",
+    "rules = rules.drop(rules[rules.lift < 1.0].index)\n",
+    "# # 设置标题索引并打印结果\n",
+    "rules.rename(columns={'antecedents': 'from', 'consequents': 'to', 'support': 'sup', 'confidence': 'conf'}, inplace=True)\n",
+    "rules = rules[['from', 'to', 'sup', 'conf', 'lift']]\n",
+    "print(rules)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
