--- a/week2/作业.ipynb
+++ b/week2/作业.ipynb
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-14T12:47:47.101344Z",
-     "start_time": "2020-11-14T12:47:46.877205Z"
+     "end_time": "2020-11-16T06:57:10.423705Z",
+     "start_time": "2020-11-16T06:57:09.638203Z"
     }
    },
    "outputs": [
@@ -81,34 +81,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      support                           itemsets\n",
-      "0    0.020397                          (almonds)\n",
-      "1    0.033329                          (avocado)\n",
-      "2    0.033729                         (brownies)\n",
-      "3    0.087188                          (burgers)\n",
-      "4    0.030129                           (butter)\n",
-      "..        ...                                ...\n",
-      "98   0.020131  (mineral water, whole wheat rice)\n",
-      "99   0.022930             (spaghetti, olive oil)\n",
-      "100  0.025197              (spaghetti, pancakes)\n",
-      "101  0.021197                (spaghetti, shrimp)\n",
-      "102  0.020931              (tomatoes, spaghetti)\n",
-      "\n",
-      "[103 rows x 2 columns]\n",
-      "                  from               to       sup      conf      lift\n",
-      "0               (eggs)        (burgers)  0.028796  0.160237  1.837830\n",
-      "1            (burgers)           (eggs)  0.028796  0.330275  1.837830\n",
-      "2            (burgers)   (french fries)  0.021997  0.252294  1.476173\n",
-      "3            (burgers)  (mineral water)  0.024397  0.279817  1.173883\n",
-      "4            (burgers)      (spaghetti)  0.021464  0.246177  1.413918\n",
-      "..                 ...              ...       ...       ...       ...\n",
-      "66  (whole wheat rice)  (mineral water)  0.020131  0.343964  1.442993\n",
-      "67         (olive oil)      (spaghetti)  0.022930  0.348178  1.999758\n",
-      "68          (pancakes)      (spaghetti)  0.025197  0.265077  1.522468\n",
-      "69            (shrimp)      (spaghetti)  0.021197  0.296642  1.703760\n",
-      "70          (tomatoes)      (spaghetti)  0.020931  0.306043  1.757755\n",
-      "\n",
-      "[67 rows x 5 columns]\n"
+      "                   from                   to       sup      conf      lift\n",
+      "52          (spaghetti)        (ground beef)  0.039195  0.225115  2.291162\n",
+      "53        (ground beef)          (spaghetti)  0.039195  0.398915  2.291162\n",
+      "67          (olive oil)          (spaghetti)  0.022930  0.348178  1.999758\n",
+      "62               (soup)      (mineral water)  0.023064  0.456464  1.914955\n",
+      "41  (frozen vegetables)               (milk)  0.023597  0.247552  1.910382\n",
+      "40               (milk)  (frozen vegetables)  0.023597  0.182099  1.910382\n",
+      "1             (burgers)               (eggs)  0.028796  0.330275  1.837830\n",
+      "0                (eggs)            (burgers)  0.028796  0.160237  1.837830\n",
+      "59          (olive oil)      (mineral water)  0.027596  0.419028  1.757904\n",
+      "70           (tomatoes)          (spaghetti)  0.020931  0.306043  1.757755\n",
+      "50      (mineral water)        (ground beef)  0.040928  0.171700  1.747522\n",
+      "51        (ground beef)      (mineral water)  0.040928  0.416554  1.747522\n",
+      "48        (ground beef)               (milk)  0.021997  0.223881  1.727704\n",
+      "49               (milk)        (ground beef)  0.021997  0.169753  1.727704\n",
+      "69             (shrimp)          (spaghetti)  0.021197  0.296642  1.703760\n",
+      "44  (frozen vegetables)          (spaghetti)  0.027863  0.292308  1.678867\n",
+      "43          (spaghetti)  (frozen vegetables)  0.027863  0.160031  1.678867\n",
+      "20        (cooking oil)      (mineral water)  0.020131  0.394256  1.653978\n",
+      "6             (chicken)      (mineral water)  0.022797  0.380000  1.594172\n",
+      "42  (frozen vegetables)      (mineral water)  0.035729  0.374825  1.572463\n",
+      "57          (spaghetti)               (milk)  0.035462  0.203675  1.571779\n",
+      "58               (milk)          (spaghetti)  0.035462  0.273663  1.571779\n",
+      "55      (mineral water)               (milk)  0.047994  0.201342  1.553774\n",
+      "56               (milk)      (mineral water)  0.047994  0.370370  1.553774\n",
+      "68           (pancakes)          (spaghetti)  0.025197  0.265077  1.522468\n",
+      "15               (milk)          (chocolate)  0.032129  0.247942  1.513276\n",
+      "14          (chocolate)               (milk)  0.032129  0.196094  1.513276\n",
+      "65           (tomatoes)      (mineral water)  0.024397  0.356725  1.496530\n",
+      "60           (pancakes)      (mineral water)  0.033729  0.354839  1.488616\n",
+      "2             (burgers)       (french fries)  0.021997  0.252294  1.476173\n",
+      "11  (frozen vegetables)          (chocolate)  0.022930  0.240559  1.468215\n",
+      "66   (whole wheat rice)      (mineral water)  0.020131  0.343964  1.442993\n",
+      "64      (mineral water)          (spaghetti)  0.059725  0.250559  1.439085\n",
+      "63          (spaghetti)      (mineral water)  0.059725  0.343032  1.439085\n",
+      "13        (ground beef)          (chocolate)  0.023064  0.234735  1.432669\n",
+      "5                (cake)      (mineral water)  0.027463  0.338816  1.421397\n",
+      "4             (burgers)          (spaghetti)  0.021464  0.246177  1.413918\n",
+      "61             (shrimp)      (mineral water)  0.023597  0.330224  1.385352\n",
+      "18          (spaghetti)          (chocolate)  0.039195  0.225115  1.373952\n",
+      "19          (chocolate)          (spaghetti)  0.039195  0.239219  1.373952\n",
+      "17          (chocolate)      (mineral water)  0.052660  0.321400  1.348332\n",
+      "16      (mineral water)          (chocolate)  0.052660  0.220917  1.348332\n",
+      "39    (frozen smoothie)      (mineral water)  0.020264  0.320000  1.342461\n",
+      "26               (milk)               (eggs)  0.030796  0.237654  1.322437\n",
+      "25               (eggs)               (milk)  0.030796  0.171365  1.322437\n",
+      "54     (low fat yogurt)      (mineral water)  0.023997  0.313589  1.315565\n",
+      "29           (pancakes)               (eggs)  0.021730  0.228612  1.272118\n",
+      "23  (frozen vegetables)               (eggs)  0.021730  0.227972  1.268559\n",
+      "32       (french fries)          (green tea)  0.028530  0.166927  1.263488\n",
+      "33          (green tea)       (french fries)  0.028530  0.215943  1.263488\n",
+      "36           (pancakes)       (french fries)  0.020131  0.211781  1.239135\n",
+      "10          (chocolate)       (french fries)  0.034395  0.209927  1.228284\n",
+      "9        (french fries)          (chocolate)  0.034395  0.201248  1.228284\n"
      ]
     }
    ],
@@ -126,14 +152,6 @@
     "datas=pd.read_csv('data/Market_Basket_Optimisation.csv',header=None)\n",
     "# 通过迭代器方式对pd读取出来的数据转成list数组，并且出去其中的nan\n",
     "itemsets = [[y for y in x if pd.notna(y)] for x in datas.values.tolist()]\n",
-    "# itemDits={}\n",
-    "# for items in itemsets:\n",
-    "#     for item in items:\n",
-    "#         if item not in itemDits.keys():\n",
-    "#             itemDits[item] = 1\n",
-    "#         else:\n",
-    "#             itemDits[item] = itemDits[item] + 1\n",
-    "# itemDits = sorted(itemDits.items(), key=lambda item:item[1], reverse=True)\n",
     "\n",
     "# 转换为算法可接受模型（布尔值）one-hot操作\n",
     "te = TransactionEncoder()\n",
@@ -143,10 +161,11 @@
     "# 设置支持度求频繁项集\n",
     "frequent_itemsets = apriori(df, min_support=0.02, use_colnames=True)\n",
     "# 求关联规则,设置最小置信度为0.15\n",
-    "print(frequent_itemsets)\n",
     "rules = association_rules(frequent_itemsets,metric='confidence',  min_threshold=0.15)\n",
-    "# 设置最小提升度\n",
-    "rules = rules.drop(rules[rules.lift < 1.0].index)\n",
+    "# 删除提升度小于1.2的关联项\n",
+    "rules = rules.drop(rules[rules.lift < 1.2].index)\n",
+    "# 对提升度由大到小排序\n",
+    "rules = rules.sort_values(by=\"lift\",ascending=False) \n",
     "# # 设置标题索引并打印结果\n",
     "rules.rename(columns={'antecedents': 'from', 'consequents': 'to', 'support': 'sup', 'confidence': 'conf'}, inplace=True)\n",
     "rules = rules[['from', 'to', 'sup', 'conf', 'lift']]\n",
@@ -155,16 +174,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# itemDits={}\n",
+    "# for items in itemsets:\n",
+    "#     for item in items:\n",
+    "#         if item not in itemDits.keys():\n",
+    "#             itemDits[item] = 1\n",
+    "#         else:\n",
+    "#             itemDits[item] = itemDits[item] + 1\n",
+    "# itemDits = sorted(itemDits.items(), key=lambda item:item[1], reverse=True)"
+   ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-16T07:58:41.334689Z",
+     "start_time": "2020-11-16T07:58:41.330979Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class '__main__.FpNode'>, {})\n"
+     ]
+    }
+   ],
+   "source": [
+    "#由于fptools没有文档，而案例中只能得到频繁项集，所以决定自己写一个fp-growth的实现\n",
+    "# 定义树的结构，fpgrowth有基本要素有 1.节点编码 2.节点在交易中出现的次数 3. 父亲节点 孩子节点\n",
+    "import collections\n",
+    "class FpNode(object):\n",
+    "    #构建节点\n",
+    "    def __init__(self, code, count=1, parent=None):\n",
+    "        self.code = code\n",
+    "        self.count = count\n",
+    "        self.parent = parent\n",
+    "        #初始化子节点为空字典\n",
+    "        self.children = collections.defaultdict(FPNode)\n",
+    "        #如果父亲节点为空表明该节点为新的商品在新的交易中是所有交易中加购次数最多的并且是一次出现的\n",
+    "        if parent != None:\n",
+    "            parent.children[code] = self\n",
+    "class Ftree(object):\n",
+    "    def __init__(self, FpNode):\n",
+    "        \n",
+    "    #创建树\n",
+    "    def createTree(self, FpNode):\n",
+    "    \n",
+    "\n",
+    "print(collections.defaultdict(FpNode))\n",
+    "\n",
+    "# 读取表格数据\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "raw",
