修改理解错误出

--- a/week2/随堂笔记.ipynb
+++ b/week2/随堂笔记.ipynb
@@ -144,9 +144,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-16T08:38:38.794220Z",
+     "start_time": "2020-11-16T08:38:38.778168Z"
+    }
+   },
+   "source": [
+    "如果自变量和因变量之间都没有相关性了，那么自然不需要相关性分析了，此时就不需要进行回归分析了。所以对给定的数据集，我们可以先对数据进行一定的相关性分析，相关性分析工具有pd的corr工具"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,9 +246,7 @@
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": [
-    "总结："
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
