--- a/week3/随堂笔记.ipynb
+++ b/week3/随堂笔记.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     " ## 什么是用户画像\n",
-    "     用户画像是指根据用户的属性、偏好、行为、生活习惯、等信息来对用户进行打标签。它在日常生活工作中都有重要应用：\n",
+    "     用户画像是指根据用户的属性、偏好、行为、生活习惯等信息来对用户进行打标签。它在日常生活工作中都有重要应用：\n",
     "     \n",
     "     （1）精准营销：根据历史用户特征，分析产品的潜在用户和用户的潜在需求，针对特定群体，利用短信、邮件等方式进行营销\n",
     "\n",
@@ -24,52 +24,38 @@
     "\n",
     "     （5）行业报告&用户研究：通过用户画像分析可以了解行业动态，如人群消费习惯、消费偏好分析、不同地域品类消费差异分析\n",
     "     \n",
-    "     不同群体眼中有不同的定义：\n",
-    "         \n",
-    "  |     | 概念  |\n",
-    "  |  :----  | ----:  |\n",
-    "  | 领导  | 某个群体需求 |\n",
-    "  | 产品  | 群体 |\n",
-    "  | 开发  | 牛奶、尿布、啤酒、鸡蛋 |\n",
-    "  | 运营  | 面包、牛奶、尿布、啤酒 |\n",
-    "  | 订单5  | 面包、牛奶、尿布、可乐 |\n",
-    "     \n",
+    " \n",
     "     \n",
     " \n",
     " \n",
     " ## 如何定义标签 \n",
+    "     定义标签就是构建用户画像的过程，它主要解决的是人生三大哲学问题：\n",
+    "         都是谁： 用户自身属性，如：身高，体重，性别，学历，籍贯,支付习惯，上网设备，\n",
+    "         从哪来 ： 对电商而言，有百度，谷歌，各大门户网站，贴吧，博客，直接进入等\n",
+    "         到哪去： 用户在系统中都做了些什么\n",
+    "     用户标签的三大准则：\n",
+    "         1.统一用户标识\n",
+    "         2.给用户打标签\n",
+    "         3.用标签知道业务\n",
+    "   \n",
     " ## 如何打标签，\n",
-    " ## 如何给用户推荐标签\n",
-    " ## 让用户打标签\n",
+    "     可以通过人工打标签\n",
+    "            PGC专家标签：效率低，质量高\n",
+    "            UGC用户标签：数量大，质量低，数据不统一\n",
+    "     通过算法挖掘标签：如 K-Means，EM聚类，Mean-Shift，DBSCAN，层次聚类，PCA等聚类算法\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 标签挖掘算法\n",
     " \n",
-    " \n",
-    " \n",
-    "用户画像三个标准：都是谁 1.统一标识（整个用户画像的核心） 2.给用户打标签（四个纬度） 3 基于标签指导业务\n",
-    "    从哪来 到哪去\n",
-    " \n",
-    " 八字准则：用户消费行为标签\n",
-    " 用户标签：性别/年龄\n",
-    " 消费标签：\n",
-    " 行为标签：分为隐形和显性行为\n",
-    " 内容标签(兴趣标签)：\n",
-    " \n",
-    " \n",
-    " 用户生命周期： 获客、粘客（日活用户，平均时长dau）、留客\n",
-    " \n",
-    " 数据流\n",
-    " \n",
-    " 原始数据 =》算法层=》业务层\n",
-    " \n",
-    " \n",
-    " \n",
-    " PGC 专家打标签     质量高 数量少\n",
-    " UGC 普通用户打标签  质量低 数量大  一致性低\n",
-    " \n",
-    " \n",
-    "大量数据需要打标签/缺乏分类标签 算法：\n",
-    "  聚类算法means  o(n*m*k) 其中n为：数据量 m为feature k为标签数量  特别海量数据可以采用分桶或者树结构或者随机投影森林\n",
-    "          数据归一化/z-score/小数一定定标法\n",
-    "  EM 算法\n",
+    " 聚类算法means：\n",
+    "         步骤：是一种基于划分的聚类方法，选取初始中心点-启发式迭代-达到停止条件，其中在k-means中初始中心点的选择即是根据欲聚类的个数随机挑选，启发式迭代是衡量每个点与选取点的距离，并选择最小点鬼为一类，在对该类求平均，作为下次巨累的中心位置，停止条件是类中心点位置变化不大或者达到迭代次数阈值。其时间复杂度为o(n*m*k) 其中n为：数据量 m为feature k为标签数量，对于海量数据，为了提高效率可以使用分桶或者树结构或者随机投影森林\n",
+    "         优点：对于大数据集，k-means算法相对是可伸缩和高效的，它的计算复杂度接近线性\n",
+    "         缺点：初始中心点和离群点的影响每次的结果不稳定，结果通常不是全局最优而是局部最优解、无法很好地解决数据簇分布差别比较大的情况（比如一类是另外一类样本数量的10倍）、不太适用于离散分类、只适用于规则形状的中心簇等。但是瑕不掩瑜，它仍有很多优点：，尽管它通常以局部最优结束迭代，但一般情况下达到的局部最优也可以满足需求\n",
+    "  EM 算法：\n",
     "  GMM算法\n",
     "  \n",
     "  \n",
