--- a/week3/作业.ipynb
+++ b/week3/作业.ipynb
@@ -40,7 +40,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如果你使用大众点评，想要给某个餐厅打标签。这时系统可以自动提示一些标签，你会如何设计（标签推荐）"
+    "## 如果你使用大众点评，想要给某个餐厅打标签。这时系统可以自动提示一些标签，你会如何设计（标签推荐）\n",
+    "    当该餐厅是新餐厅的时候，可以给用户u推荐整个系统最热门的标签或者推荐他自己经常使用的标签\n",
+    "    当用户是没用使用过标签的时候给用户u推荐物品i上最热门的标签\n",
+    "    如果餐厅有标签，用户也打过标签，可以使用将餐厅标签与用户自己的标签融合加权方式，对最终权重大的标签推荐\n"
    ]
   },
   {
@@ -52,8 +55,48 @@
     }
    },
    "source": [
-    "## 我们今天使用了10种方式来解MNIST，这些方法有何不同？你还有其他方法来解决MNIST识别问题么（分类方法）"
+    "## 我们今天使用了10种方式来解MNIST，这些方法有何不同？你还有其他方法来解决MNIST识别问题么（分类方法）\n",
+    "\n",
+    "    Logistic Regression :逻辑回归模型，可解释性非常好\n",
+    "    CART，ID3（决策树）：树模型，同增同减操作，所以不需要归一化和one-hot操作\n",
+    "    朴素贝叶斯：假设各个特征彼此独立的贝叶斯概率\n",
+    "    SVM：基于训练集合D DD在样本空间中找到一个划分超平面，将不同的类别样本分开\n",
+    "    KNN：通过测量不同特征值之间的距离进行分类，如果一个样本在特征空间中的k个最相似(即特征空间中最邻近)的样本中的大多数属于某一个类别，\n",
+    "         则该样本也属于这个类别\n",
+    "    Adaboost: 迭代算法，针对同一个训练集训练不同的分类器(弱分类器)，然后把这些弱分类器集合起来，构成一个更强的最终分类器（强分类器）\n",
+    "    XGBoost: Boost算法一个成员根本思想在于通过多个简单的弱分类器通过不断加入特征新的树最快速度降低残差，构建出准确率很高的强分类器\n",
+    "    TPOT：通过遗传算法进行特征选择和算法模型选择，自动完成机器学习流程设计中特征工程、模型选择、超参优化三个重要环节，\n",
+    "          以此来生成机器学习的主线代码\n",
+    "    keras：是神经网络模型算法，通过深度计算方式来实现\n",
+    "\n",
+    "    分类方法主要包括：随机森林 朴素贝叶斯  决策树 LDA等"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
