--- a/week3/作业.ipynb
+++ b/week3/作业.ipynb
@@ -82,20 +82,215 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 针对Delicious数据集，对SimpleTagBased算法进行改进（使用NormTagBased、TagBased-TFIDF算法）"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-26T12:02:29.044422Z",
+     "start_time": "2020-11-26T12:02:22.860174Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "开始数据加载...\n",
+      "数据集大小为 437593.\n",
+      "设置tag的人数 1867.\n",
+      "数据加载完成\n",
+      "\n",
+      "训练集样本数 1860, 测试集样本数 1793\n",
+      "user_tags, tag_items, user_items初始化完成.\n",
+      "user_tags大小 1860, tag_items大小 36884, user_items大小 1860\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "Replacement index 1 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-562eedf95f08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0minitStat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'recommend_normalTagBased'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-562eedf95f08>\u001b[0m in \u001b[0;36mtestRecommend\u001b[0;34m(methods)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;31m# 使用测试集，对推荐结果进行评估\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"recommend\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{1}推荐结果评估\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%3s %10s %10s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'N'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"精确率\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'召回率'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: Replacement index 1 out of range for positional args tuple"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用SimpleTagBased算法对Delicious2K数据进行推荐\n",
+    "# 原始数据集：https://grouplens.org/datasets/hetrec-2011/\n",
+    "# 数据格式：userID     bookmarkID     tagID     timestamp\n",
+    "import random\n",
+    "import math\n",
+    "import operator\n",
+    "import pandas as pd\n",
+    "\n",
+    "file_path = \"./code/delicious-2k/user_taggedbookmarks-timestamps.dat\"\n",
+    "# 字典类型，保存了user对item的tag，即{userid: {item1:[tag1, tag2], ...}}\n",
+    "records = {}\n",
+    "# 训练集，测试集\n",
+    "train_data = dict()\n",
+    "test_data = dict()\n",
+    "# 用户标签，商品标签\n",
+    "user_tags = dict()\n",
+    "tag_items = dict()\n",
+    "user_items = dict()\n",
+    "\n",
+    "# 使用测试集，计算准确率和召回率\n",
+    "def precisionAndRecall(N,methods=\"recommend\"):\n",
+    "    hit = 0\n",
+    "    h_recall = 0\n",
+    "    h_precision = 0\n",
+    "    for user,items in test_data.items():\n",
+    "        if user not in train_data:\n",
+    "            continue\n",
+    "        # 获取Top-N推荐列表\n",
+    "        # 通过globals()返回的字典查找函数方法，来获取排名\n",
+    "        rank = globals()[methods](user, N)\n",
+    "\n",
+    "#         rank = recommend(user, N)\n",
+    "        for item,rui in rank:\n",
+    "            if item in items:\n",
+    "                hit = hit + 1\n",
+    "        h_recall = h_recall + len(items)\n",
+    "        h_precision = h_precision + N\n",
+    "    #print('一共命中 %d 个, 一共推荐 %d 个, 用户设置tag总数 %d 个' %(hit, h_precision, h_recall))\n",
+    "    # 返回准确率 和 召回率\n",
+    "    return (hit/(h_precision*1.0)), (hit/(h_recall*1.0))\n",
+    "\n",
+    "# 对用户user推荐Top-N\n",
+    "def recommend(user, N):\n",
+    "    recommend_items=dict()\n",
+    "    # 对Item进行打分，分数为所有的（用户对某标签使用的次数 wut, 乘以 商品被打上相同标签的次数 wti）之和\n",
+    "    tagged_items = user_items[user]     \n",
+    "    for tag, wut in user_tags[user].items():\n",
+    "        #print(self.user_tags[user].items())\n",
+    "        for item, wti in tag_items[tag].items():\n",
+    "            if item in tagged_items:\n",
+    "                continue\n",
+    "            #print('wut = %s, wti = %s' %(wut, wti))\n",
+    "            if item not in recommend_items:\n",
+    "                recommend_items[item] = wut * wti\n",
+    "            else:\n",
+    "                recommend_items[item] = recommend_items[item] + wut * wti\n",
+    "    return sorted(recommend_items.items(), key=operator.itemgetter(1), reverse=True)[0:N]\n",
+    "\n",
+    "#NormTagBased算法： score(u,i)= user_tags[u,t]/user_tags[u] * tag_items[t,i]/tag_items[t]\n",
+    "# 对score进行归一化\n",
+    "def recommend_normalTagBased(user, N):\n",
+    "    recommend_items=dict()\n",
+    "    # 对Item进行打分，分数为所有的（用户对某标签使用的次数 wut, 乘以 商品被打上相同标签的次数 wti）之和\n",
+    "    tagged_items = user_items[user]     \n",
+    "    for tag, wut in user_tags[user].items():\n",
+    "        #print(self.user_tags[user].items())\n",
+    "        for item, wti in tag_items[tag].items():\n",
+    "            if item in tagged_items:\n",
+    "                continue\n",
+    "            norm = len(user_items[user].items())*len(tag_items[tag].items())\n",
+    "            #print('wut = %s, wti = %s' %(wut, wti))\n",
+    "            if item not in recommend_items:\n",
+    "                recommend_items[item] = wut * wti/norm\n",
+    "            else:\n",
+    "                recommend_items[item] = recommend_items[item] + wut * wti\n",
+    "            \n",
+    "    return sorted(recommend_items.items(), key=operator.itemgetter(1), reverse=True)[0:N]\n",
+    "\n",
+    "# 使用测试集，对推荐结果进行评估\n",
+    "def testRecommend(methods=\"recommend\"):\n",
+    "    print(\"{1}推荐结果评估\".format(methods))\n",
+    "    print(\"%3s %10s %10s\" % ('N',\"精确率\",'召回率'))\n",
+    "    for n in [5,10,20,40,60,80,100]:\n",
+    "        precision,recall = precisionAndRecall(n,methods)\n",
+    "        print(\"%3d %10.3f%% %10.3f%%\" % (n, precision * 100, recall * 100))\n",
+    "        \n",
+    "# 数据加载\n",
+    "def load_data():\n",
+    "    print(\"开始数据加载...\")\n",
+    "    df = pd.read_csv(file_path, sep='\\t')\n",
+    "    for i in range(len(df)):\n",
+    "        uid = df['userID'][i]\n",
+    "        iid = df['bookmarkID'][i]\n",
+    "        tag = df['tagID'][i]\n",
+    "        # 键不存在时，设置默认值{}\n",
+    "        records.setdefault(uid,{})\n",
+    "        records[uid].setdefault(iid,[])\n",
+    "        records[uid][iid].append(tag)\n",
+    "    print(\"数据集大小为 %d.\" % (len(df)))\n",
+    "    print(\"设置tag的人数 %d.\" % (len(records)))\n",
+    "    print(\"数据加载完成\\n\")\n",
+    "\n",
+    "# 将数据集拆分为训练集和测试集\n",
+    "def train_test_split(ratio, seed=100):\n",
+    "    random.seed(seed)\n",
+    "    for u in records.keys():\n",
+    "        for i in records[u].keys():\n",
+    "            # ratio比例设置为测试集\n",
+    "            if random.random()<ratio:\n",
+    "                test_data.setdefault(u,{})\n",
+    "                test_data[u].setdefault(i,[])\n",
+    "                for t in records[u][i]:\n",
+    "                    test_data[u][i].append(t)\n",
+    "            else:\n",
+    "                train_data.setdefault(u,{})\n",
+    "                train_data[u].setdefault(i,[])\n",
+    "                for t in records[u][i]:\n",
+    "                    train_data[u][i].append(t)        \n",
+    "    print(\"训练集样本数 %d, 测试集样本数 %d\" % (len(train_data),len(test_data)))\n",
+    "\n",
+    "# 设置矩阵 mat[index, item] = 1\n",
+    "def addValueToMat(mat, index, item, value=1):\n",
+    "    if index not in mat:\n",
+    "        mat.setdefault(index,{})\n",
+    "        mat[index].setdefault(item,value)\n",
+    "    else:\n",
+    "        if item not in mat[index]:\n",
+    "            mat[index][item] = value\n",
+    "        else:\n",
+    "            mat[index][item] += value\n",
+    "\n",
+    "\n",
+    "# 使用训练集，初始化user_tags, tag_items, user_items\n",
+    "def initStat():\n",
+    "    records=train_data\n",
+    "    for u,items in records.items():\n",
+    "        for i,tags in items.items():\n",
+    "            for tag in tags:\n",
+    "                #print tag\n",
+    "                # 用户和tag的关系\n",
+    "                addValueToMat(user_tags, u, tag, 1)\n",
+    "                # tag和item的关系\n",
+    "                addValueToMat(tag_items, tag, i, 1)\n",
+    "                # 用户和item的关系\n",
+    "                addValueToMat(user_items, u, i, 1)\n",
+    "    print(\"user_tags, tag_items, user_items初始化完成.\")\n",
+    "    print(\"user_tags大小 %d, tag_items大小 %d, user_items大小 %d\" % (len(user_tags), len(tag_items), len(user_items)))\n",
+    "\n",
+    "# 数据加载\n",
+    "load_data()\n",
+    "# 训练集，测试集拆分，20%测试集\n",
+    "train_test_split(0.2)\n",
+    "initStat()\n",
+    "testRecommend()\n",
+    "testRecommend('recommend_normalTagBased')\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 对Titanic数据进行清洗，建模并对乘客生存进行预测。使用之前介绍过的10种模型中的至少2种（包括TPOT）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
