--- a/week3/作业.ipynb
+++ b/week3/作业.ipynb
@@ -88,11 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-26T12:02:29.044422Z",
-     "start_time": "2020-11-26T12:02:22.860174Z"
+     "start_time": "2020-11-26T14:52:53.037Z"
     }
    },
    "outputs": [
@@ -107,19 +106,13 @@
       "\n",
       "训练集样本数 1860, 测试集样本数 1793\n",
       "user_tags, tag_items, user_items初始化完成.\n",
-      "user_tags大小 1860, tag_items大小 36884, user_items大小 1860\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "Replacement index 1 out of range for positional args tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-562eedf95f08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0minitStat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'recommend_normalTagBased'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-562eedf95f08>\u001b[0m in \u001b[0;36mtestRecommend\u001b[0;34m(methods)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;31m# 使用测试集，对推荐结果进行评估\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtestRecommend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"recommend\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{1}推荐结果评估\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethods\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%3s %10s %10s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'N'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"精确率\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'召回率'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: Replacement index 1 out of range for positional args tuple"
+      "user_tags大小 1860, tag_items大小 36884, user_items大小 1860\n",
+      "recommend推荐结果评估\n",
+      "  N        精确率        召回率\n",
+      "  5      0.829%      0.355%\n",
+      " 10      0.633%      0.542%\n",
+      " 20      0.512%      0.877%\n",
+      " 40      0.381%      1.304%\n"
      ]
     }
    ],
@@ -142,6 +135,8 @@
     "user_tags = dict()\n",
     "tag_items = dict()\n",
     "user_items = dict()\n",
+    "tag_users= dict()\n",
+    "items_users= dict()\n",
     "\n",
     "# 使用测试集，计算准确率和召回率\n",
     "def precisionAndRecall(N,methods=\"recommend\"):\n",
@@ -193,18 +188,40 @@
     "        for item, wti in tag_items[tag].items():\n",
     "            if item in tagged_items:\n",
     "                continue\n",
-    "            norm = len(user_items[user].items())*len(tag_items[tag].items())\n",
+    "            norm = len(user_tags[user].items())*len(tag_users[tag].items())\n",
+    "#             norm = len(user_tags[user].items())*len(tag_itemsg[tag].items())\n",
     "            #print('wut = %s, wti = %s' %(wut, wti))\n",
     "            if item not in recommend_items:\n",
     "                recommend_items[item] = wut * wti/norm\n",
     "            else:\n",
-    "                recommend_items[item] = recommend_items[item] + wut * wti\n",
+    "                recommend_items[item] = recommend_items[item] + wut * wti/norm\n",
     "            \n",
     "    return sorted(recommend_items.items(), key=operator.itemgetter(1), reverse=True)[0:N]\n",
     "\n",
+    "#NormTagBased算法： score(u,i)= user_tags[u,t]/log(user_tags[u]+1) * tag_items[t,i]\n",
+    "# 对score进行归一化\n",
+    "def recommend_TagBasedTFIDF(user, N):\n",
+    "    recommend_items=dict()\n",
+    "    # 对Item进行打分，分数为所有的（用户对某标签使用的次数 wut, 乘以 商品被打上相同标签的次数 wti）之和\n",
+    "    tagged_items = user_items[user]     \n",
+    "    for tag, wut in user_tags[user].items():\n",
+    "        #print(self.user_tags[user].items())\n",
+    "        for item, wti in tag_items[tag].items():\n",
+    "            if item in tagged_items:\n",
+    "                continue\n",
+    "            norm = math.log(len(tag_users[tag].items())+1,2)\n",
+    "            #print('wut = %s, wti = %s' %(wut, wti))\n",
+    "            if item not in recommend_items:\n",
+    "                recommend_items[item] = wut * wti/norm\n",
+    "            else:\n",
+    "                recommend_items[item] = recommend_items[item] + wut * wti/norm\n",
+    "            \n",
+    "    return sorted(recommend_items.items(), key=operator.itemgetter(1), reverse=True)[0:N]\n",
+    "\n",
+    "\n",
     "# 使用测试集，对推荐结果进行评估\n",
     "def testRecommend(methods=\"recommend\"):\n",
-    "    print(\"{1}推荐结果评估\".format(methods))\n",
+    "    print(\"{}推荐结果评估\".format(methods))\n",
     "    print(\"%3s %10s %10s\" % ('N',\"精确率\",'召回率'))\n",
     "    for n in [5,10,20,40,60,80,100]:\n",
     "        precision,recall = precisionAndRecall(n,methods)\n",
@@ -269,16 +286,26 @@
     "                addValueToMat(tag_items, tag, i, 1)\n",
     "                # 用户和item的关系\n",
     "                addValueToMat(user_items, u, i, 1)\n",
+    "                # tag和用户关系\n",
+    "                addValueToMat(tag_users, tag, u, 1)\n",
+    "                \n",
+    "                # tag和用户关系\n",
+    "                addValueToMat(tag_users, tag, u, 1)\n",
+    "                \n",
+    "                # item和用户关系\n",
+    "                addValueToMat(items_users, i, u, 1)\n",
     "    print(\"user_tags, tag_items, user_items初始化完成.\")\n",
     "    print(\"user_tags大小 %d, tag_items大小 %d, user_items大小 %d\" % (len(user_tags), len(tag_items), len(user_items)))\n",
     "\n",
     "# 数据加载\n",
     "load_data()\n",
     "# 训练集，测试集拆分，20%测试集\n",
+    "\n",
     "train_test_split(0.2)\n",
     "initStat()\n",
     "testRecommend()\n",
-    "testRecommend('recommend_normalTagBased')\n"
+    "testRecommend('recommend_normalTagBased')\n",
+    "testRecommend('recommend_TagBasedTFIDF')"
    ]
   },
   {
@@ -289,9 +316,83 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-26T14:11:23.993360Z",
+     "start_time": "2020-11-26T14:10:35.440Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn import metrics\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "# 数据加载\n",
+    "train_data = pd.read_csv('./code/titanic/train.csv')\n",
+    "test_data = pd.read_csv('./code/titanictest.csv')\n",
+    "# 数据探索\n",
+    "# 查看train_data信息\n",
+    "#pd.set_option('display.max_columns', None) #显示所有列\n",
+    "print('查看数据信息：列名、非空个数、类型等')\n",
+    "print(train_data.info()\n",
+    "print('-'*30)\n",
+    "print('查看数据摘要')\n",
+    "print(train_data.describe())\n",
+    "print('-'*30)\n",
+    "print('查看离散数据分布')\n",
+    "print(train_data.describe(include=['O']))\n",
+    "print('-'*30)\n",
+    "print('查看前5条数据')\n",
+    "print(train_data.head())\n",
+    "print('-'*30)\n",
+    "print('查看后5条数据')\n",
+    "print(train_data.tail())\n",
+    "\n",
+    "# 使用平均年龄来填充年龄中的nan值\n",
+    "train_data['Age'].fillna(train_data['Age'].mean(), inplace=True)\n",
+    "test_data['Age'].fillna(test_data['Age'].mean(),inplace=True)\n",
+    "# 使用票价的均值填充票价中的nan值\n",
+    "train_data['Fare'].fillna(train_data['Fare'].mean(), inplace=True)\n",
+    "test_data['Fare'].fillna(test_data['Fare'].mean(),inplace=True)\n",
+    "\n",
+    "print(train_data['Embarked'].value_counts())\n",
+    "# 使用登录最多的港口来填充登录港口的nan值\n",
+    "train_data['Embarked'].fillna('S', inplace=True)\n",
+    "test_data['Embarked'].fillna('S',inplace=True)\n",
+    "# 特征选择\n",
+    "features = ['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked']\n",
+    "train_features = train_data[features]\n",
+    "train_labels = train_data['Survived']\n",
+    "test_features = test_data[features]\n",
+    "print('特征值')\n",
+    "print(train_features)\n",
+    "\n",
+    "dvec=DictVectorizer(sparse=False)\n",
+    "train_features=dvec.fit_transform(train_features.to_dict(orient='record'))\n",
+    "print(dvec.feature_names_)\n",
+    "# 构造ID3决策树\n",
+    "clf = DecisionTreeClassifier(criterion='entropy')\n",
+    "# 决策树训练\n",
+    "clf.fit(train_features, train_labels)\n",
+    "\n",
+    "test_features=dvec.transform(test_features.to_dict(orient='record'))\n",
+    "# 决策树预测\n",
+    "pred_labels = clf.predict(test_features)\n",
+    "\n",
+    "# 得到决策树准确率(基于训练集)\n",
+    "acc_decision_tree = round(clf.score(train_features, train_labels), 6)\n",
+    "print(u'score准确率为 %.4lf' % acc_decision_tree)\n",
+    "\n",
+    "# 使用K折交叉验证 统计决策树准确率\n",
+    "print(u'cross_val_score准确率为 %.4lf' % np.mean(cross_val_score(clf, train_features, train_labels, cv=10)))\n"
+   ]
   }
  ],
  "metadata": {
